# maze-core

./: .gitignore  Cargo.toml  README.md
crates/maze-core/: Cargo.toml
crates/maze-core/src/: address_gen.rs  error.rs  lib.rs  params.rs  topology.rs  utils.rs
crates/maze-example/: Cargo.toml
crates/maze-example/src/: main.rs
crates/maze-solana/: Cargo.toml
crates/maze-solana/src/: lib.rs
