[workspace]
members = [
    "crates/maze-core",
    "crates/maze-solana",
    "crates/maze-example",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Edu <kurakuro25@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fasqua/maze-core"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
rand = "0.8"
thiserror = "1.0"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }
